# tlpdk3

./: .dockerignore  .gitignore  Dockerfile  composer.json  docker-compose.yml
.woodpecker/: chat.yml
app/Http/Controllers/: ExperienceController.php  ProjectController.php  VeiwController.php
app/Models/: Experience.php  ExperienceItem.php  Project.php
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
frontend/assets/icon/: site.webmanifest
frontend/assets/styles/: home.scss  index.scss  krydsbole.scss  modal.scss  nav.scss  opponet-pick.scss  robot.scss
frontend/src/: main.rs
frontend/src/comp/: card_snake.rs  glow_card.rs  layered_list_card.rs  mod.rs  modal.rs  robot.rs
frontend/src/pages/: home.rs  mod.rs  projects.rs
public/files/: index-f92a62b8da94c850.css  index.css  index.html  tailwind-9c84f3dfd0718b74.css  tailwind.css  trunk-template-a54509bd3f333103.js  trunk-template-a54509bd3f333103_bg.wasm  trunk-template-df01cd7acb56ad46.js  trunk-template-df01cd7acb56ad46_bg.wasm  trunk-template.js  trunk-template_bg.wasm
routes/: web.php
