[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
web-sys = { version="0.3.77", features=["CssStyleDeclaration","HtmlElement"] }
gloo = {version="0.11.0", features=["futures"]}
serde = {version="1.0.217", features=["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.0"
rmp-serde = "1.3.0"
